tests/ui/inference/need_type_info/single-const-generic-suggestion.stderr
error[E0284]: type annotations needed
  --> $DIR/single-const-generic-suggestion.rs:6:5
   |
LL |     func();
   |     ^^^^ cannot infer the value of the const parameter `CONST` declared on the function `func`
   |
note: required by a const generic parameter in `func`
  --> $DIR/single-const-generic-suggestion.rs:3:9
   |
LL | fn func<const CONST: usize>() {}
   |         ^^^^^^^^^^^^^^^^^^ required by this const generic parameter in `func`
help: consider specifying a const for the const parameter `CONST`
   |
LL |     func::</* CONST */>();
   |         +++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
