tests/ui/inference/need_type_info/single-const-generic-suggestion.rs
// compile-fail

fn func<const CONST: usize>() {}

fn main() {
    func();
    //~^ ERROR type annotations needed
    //~| HELP consider specifying a const for the const generic `CONST`
}
